# needroleshere

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
contrib/systemd/: README.md
contrib/systemd/default/: needroleshere
contrib/systemd/system/: needroleshere-bind@.service  needroleshere-dir.service  needroleshere-ecs-relative.socket  needroleshere.service  needroleshere.socket
dev/: gci-loop.sh  roundtrip-gci.sh  serve.sh
src/: auth.rs  binding.rs  certificate.rs  client.rs  config.rs  dev.rs  ecdsa_sha256.rs  error.rs  identity.rs  lib.rs  main.rs  session.rs  sign.rs
src/cmd/: bind.rs  credential_process.rs  mod.rs  serve.rs  server.rs  unbind.rs
tests/examples/: ca-csr.json  ca-key.pem  ca.csr  ca.json  ca.pem  cert-csr.json  cert-ec-csr.json  cert-ec-key.pem  cert-ec-pub.pem  cert-ec.chained.pem  cert-ec.csr  cert-ec.der.b64  cert-ec.json  cert-ec.pem  cert-key.pem  cert-p384-csr.json  cert-p384-key.pem  cert-p384.chained.pem  cert-p384.csr  cert-p384.der.b64  cert-p384.json  cert-p384.pem  cert-pub.pem  cert.chained.pem  cert.csr  cert.der.b64  cert.json  cert.pem  config.json  gen.sh  subca-csr.json  subca-key.pem  subca.csr  subca.der.b64  subca.json  subca.pem
