[package]
name = "needroleshere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
base16ct = { version = "0.1.1", features = ["alloc"]}
base64ct = { version = "1.5.2", features = ["alloc"]}
bytes = "1.2.1"
chrono = "0.4.22"
crypto-bigint = { version = "0.4.8", features = ["generic-array"] }
ecdsa = { version = "0.14.7", features = ["std", "digest", "sign", "verify", "pkcs8", "pem", "hazmat"] }
elliptic-curve = { version = "0.12.3", features = ["arithmetic", "pem", "alloc", "std", "sec1", "hazmat"] }
generic-array = "0.14.6"
http = "0.2.8"
log = "0.4.17"
num-bigint = "0.4.3"
once_cell = "1.15.0"
p256 = "0.11.1"
p384 = "0.11.2"
pem-rfc7468 = { version = "0.6.0" , features = ["alloc", "std"] }
pkcs1 = { version = "0.4.0", features = ["alloc", "std", "pem", "pkcs8"] }
pkcs8 = { version = "0.9.0", features = ["alloc", "std", "pem"]}
rand = "0.8.5"
regex = "1.6.0"
reqwest = "0.11.12"
rfc6979 = "0.3.0"
rsa = { version = "0.6.1", features = ["std", "pem"] }
sec1 = { version = "0.3.0", features = ["alloc", "std", "pem", "pkcs8"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
thiserror = "1.0.36"
tokio = { version = "1.21.1", features = ["net", "macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
x509-cert = { version = "0.1.0", features = ["alloc", "pem", "std"] }
zeroize = "1.5.7"

[dev-dependencies]
openssl = "0.10.41"
