[package]
name = "needroleshere"
description = "Yet another AWS IAM Roles Anywhere helper"
version = "0.3.0"
edition = "2021"
authors = ["Sorah Fukumori <her@sorah.jp>"]
license = "Apache-2.0"
keywords = ["aws", "rolesanywhere"]
categories = ["command-line-utilities", "authentication"]
readme = "README.md"
repository = "https://github.com/sorah/needroleshere"
homepage = "https://github.com/sorah/needroleshere"
rust-version = "1.59"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
axum = "0.5.16"
base16ct = { version = "0.1.1", features = ["alloc"]}
base64ct = { version = "1.5.2", features = ["alloc"]}
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["cargo", "env", "derive"] }
crypto-bigint = { version = "0.4.8", features = ["generic-array"] }
digest = { version = "0.10.5", features = ["mac"] }
ecdsa = { version = "0.14.8", features = ["std", "digest", "sign", "verify", "pkcs8", "pem", "hazmat"] }
elliptic-curve = { version = "0.12.3", features = ["arithmetic", "pem", "alloc", "std", "sec1", "hazmat"] }
generic-array = "0.14.6"
http = "0.2.8"
listenfd = "1.0.0"
num-bigint = "0.4.3"
once_cell = "1.15.0"
p256 = "0.11.1"
p384 = "0.11.2"
pem-rfc7468 = { version = "0.6.0" , features = ["alloc", "std"] }
pkcs1 = { version = "0.4.0", features = ["alloc", "std", "pem", "pkcs8"] }
pkcs8 = { version = "0.9.0", features = ["alloc", "std", "pem"]}
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
rfc6979 = "0.3.0"
rsa = { version = "0.6.1", features = ["std", "pem"] }
sec1 = { version = "0.3.0", features = ["alloc", "std", "pem", "pkcs8"] }
secrecy = { version = "0.8.0", features = ["serde", "bytes"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["net", "macros", "rt-multi-thread", "fs"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.3.1"
x509-cert = { version = "0.1.0", features = ["alloc", "pem", "std"] }
zeroize = { version = "1.5.7", features = ["derive", "std", "alloc"] }

[dev-dependencies]
indoc = "1.0.7"
openssl = "0.10.42"
temp-dir = "0.1.11"
