[package]
name = "needroleshere"
description = "Yet another AWS IAM Roles Anywhere helper"
version = "0.4.0"
edition = "2021"
authors = ["Sorah Fukumori <her@sorah.jp>"]
license = "Apache-2.0"
keywords = ["aws", "rolesanywhere"]
categories = ["command-line-utilities", "authentication"]
readme = "README.md"
repository = "https://github.com/sorah/needroleshere"
homepage = "https://github.com/sorah/needroleshere"
rust-version = "1.65"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls-native-roots"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = "0.7.3"
base16ct = { version = "0.2.0", features = ["alloc"]}
base64ct = { version = "1.6.0", features = ["alloc"]}
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "3.2.22", features = ["cargo", "env", "derive"] }
crypto-bigint = { version = "0.5.3", features = ["generic-array"] }
digest = { version = "0.10.5", features = ["mac"] }
ecdsa = { version = "0.16.8", features = ["std", "digest", "signing", "verifying", "pkcs8", "pem", "hazmat"] }
elliptic-curve = { version = "0.13.6", features = ["arithmetic", "pem", "alloc", "std", "sec1", "hazmat"] }
generic-array = "1.0.0"
headers = "0.3.9"
http = "0.2.9"
listenfd = "1.0.0"
num-bigint = "0.4.3"
once_cell = "1.18.0"
p256 = "0.13.2"
p384 = "0.13.0"
pem-rfc7468 = { version = "0.7.0" , features = ["alloc", "std"] }
pkcs1 = { version = "0.7.5", features = ["alloc", "std", "pem", "pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["alloc", "std", "pem"]}
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.22", features = ["json"], default-features = false }
rfc6979 = "0.4.0"
rsa = { version = "0.9.3", features = ["std", "pem"] }
sec1 = { version = "0.7.3", features = ["alloc", "std", "pem", "pkcs8"] }
secrecy = { version = "0.8.0", features = ["serde", "bytes"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sha2 = { version = "0.10.8", features = ["oid"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["net", "macros", "rt-multi-thread", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
x509-cert = { version = "0.2.4", features = ["pem", "std"] }
zeroize = { version = "1.6.0", features = ["derive", "std", "alloc"] }

[dev-dependencies]
hyper = "0.14.27"
indoc = "2.0.4"
openssl = "0.10.59"
temp-dir = "0.1.11"
tower = "0.4.13"
